
	MSN:
	* Don't forget display names for buddies.
	* Fix a random crash that might occur when idle.
	* Fix more FQY 240 connection errors.
	* Fix a crash that could occur when adding a buddy.
	* Fix an occasional crash when sending message to an offline user.
	* Fix a random crash that might occur when idle.
	* Fix a crash when logging in with some long non-ASCII passwords.
	  (Shaun Lindsay)

	XMPP:
	* Users connecting to Google Talk now have an "Initiate Chat" context menu
	  option for their buddies.  (Eion Robb)
	* Fix a crash when attempting to validate an invalid JID.
	* Resolve an issue when connecting to iChat Server when no resource
	  is specified.
	* Try to automatically find a STUN server by using an SRV lookup on the
	  account's domain, and use that for voice and video if found and the user
	  didn't set one manually in prefs.
	* Fix a crash when adding a buddy without an '@'.
	* Don't show the option to send a file to a buddy if we know for certain
	  they don't support any file transfer method supported by libpurple.
	* Keep the avatar on the server if one is not set locally.

	Yahoo:
	* Fix sending /buzz.
	* Fix blocking behavior for federated (MSN/OCS/Sametime) service users.
	  (Jason Cohen)
	* Add support for adding OCS and Sametime buddies.  OCS users are added
	  as "ocs/user@domain.tld" and Sametime users are added as
	  "ibm/sametime_id".  (Jason Cohen)

	Finch:
	* The TinyURL plugin now creates shorter URLs for long non-conversation
	  URLs, e.g. URLs to open Inbox in Yahoo/MSN protocols, or the Yahoo
	  Captcha when joining chat rooms.
	* Fix displaying umlauts etc. in non-utf8 locale (fix in libgnt).

	Pidgin:
	* The userlist in a multiuser chat can be styled via gtkrc by using the
	  widget name "pidgin_conv_userlist". (Heiko Schmitt)
	* Add a hold button to the media window.
	* Fix a bug where the conversation backlog stops scrolling in a very busy
	  chat room.

	Pidgin Preference and Preference Window Changes: